--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  provider: ^4.0.5
+  dio: ^3.0.9
+  json_annotation: ^3.0.1
+  async: ^2.4.1
+  api_reqres:
+    path: ./api_reqres
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.9.0
+  json_serializable: ^3.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -43,6 +51,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
