--- a/api_reqres/pubspec.yaml
+++ b/api_reqres/pubspec.yaml
@@ -10,10 +10,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  async: ^2.4.1
+  dio: ^3.0.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.9.0
+  json_serializable: ^3.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
